@@ -1,3 +1,6 @@
+-- Use treesitter.
+vim.treesitter.start()
+
 -- These are the default option values in Vim, but not in Nvim, so must be set explicitly.
 vim.bo.commentstring = '// %s'
 vim.bo.define = '^\\s*#\\s*define'
