@@ -1,0 +1,2 @@
+-- Use treesitter.
+vim.treesitter.start()
